# livraria-django-paulo

./: .gitignore  .isort.cfg  db.sqlite3  livraria.json  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_autor_livro.py  0004_livro_autores.py
core/models/: __init__.py  autor.py  categoria.py  editora.py  livro.py  usuario.py
core/serializers/: __init__.py  autor.py  categoria.py  editora.py  livro.py
core/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/: settings.py  urls.py
media/: admin.py  router.py  views.py
media/migrations/: 0001_initial.py
media/serializers/: document.py  image.py
